[package]
name = "algorithm_rust"
version = "0.1.9"
edition = "2021"
authors = ["Donjuan Platinum <donjuan@lecturify.net>"]
license = "MIT"
description = "some common rust_algorithms, Everyone can participate, and the project will continue to be updated, all the algorithms comes from <Introduction to Algorithms III>"
repository = "https://github.com/donjuanplatinum/Rust_Algorithms"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]




